--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,12 +11,17 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     
-    <!-- VPN Permission (for system VPN service) -->
+    <!-- VPN Permissions (for system VPN service) -->
     <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
+    <uses-permission android:name="android.permission.BIND_NETWORK_RECOMMENDATION_SERVICE" />
     
     <!-- Location Permissions (for smart server selection) -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
+    <!-- System Permissions for VPN Control -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     
     <!-- Camera Permission (for QR code scanning) -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -35,7 +40,10 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
-        android:extractNativeLibs="true">
+        android:extractNativeLibs="true"
+        android:usesCleartextTraffic="false"
+        android:requestLegacyExternalStorage="false"
+        android:supportsRtl="true">
         
         <!-- Security: Prevent debugging in production -->
         <meta-data 
@@ -46,6 +54,16 @@
         <meta-data 
             android:name="android.allow_backup" 
             android:value="false" />
+            
+        <!-- Security: Network security enforcement -->
+        <meta-data 
+            android:name="android.security.net.config" 
+            android:resource="@xml/network_security_config" />
+            
+        <!-- Performance: Hardware acceleration -->
+        <meta-data
+            android:name="android.hardware.accelerated"
+            android:value="true" />
         
         <activity
             android:name=".MainActivity"
@@ -90,6 +108,18 @@
             android:name=".security.KillSwitchService"
             android:foregroundServiceType="connectedDevice"
             android:exported="false" />
+            
+        <!-- DNS Leak Protection Service -->
+        <service 
+            android:name=".security.DnsLeakProtectionService"
+            android:foregroundServiceType="connectedDevice"
+            android:exported="false" />
+            
+        <!-- Traffic Monitor Service -->
+        <service 
+            android:name=".security.TrafficMonitorService"
+            android:foregroundServiceType="connectedDevice"
+            android:exported="false" />
         
         <!-- Boot Receiver for Kill Switch -->
         <receiver 
@@ -98,6 +128,23 @@
             android:exported="false">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+                <action android:name="android.intent.action.PACKAGE_REPLACED"/>
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+        
+        <!-- Network Change Receiver -->
+        <receiver 
+            android:name=".security.NetworkChangeReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter android:priority="1000">
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>
+                <action android:name="android.net.wifi.STATE_CHANGE"/>
+            </intent-filter>
+        </receiver>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
                 <action android:name="android.intent.action.PACKAGE_REPLACED"/>
                 <data android:scheme="package"/>
