--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,21 @@ dependencies:
   dynamic_color: ^1.7.0
   flutter_animate: ^4.5.0
   
+  # VPN & Network Core
+  network_info_plus: ^5.0.0
+  internet_connection_checker: ^1.0.0+1
+  flutter_vpn: ^2.0.0
+  
   # Secure Storage & Encryption
   flutter_secure_storage: ^9.2.0
   encrypt: ^5.0.1
   crypto: ^3.0.3
+  cryptography: ^2.7.0
   
   # Network & HTTP
   dio: ^5.4.0
   connectivity_plus: ^6.0.0
+  dio_certificate_pinning: ^4.1.0
   
   # File Management
   path_provider: ^2.1.2
@@ -50,9 +57,19 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.0.2+1
   
-  # Device Info
+  # Production Monitoring & Analytics
+  sentry_flutter: ^7.18.0
+  firebase_crashlytics: ^3.4.18
+  firebase_performance: ^0.9.4+6
+  
+  # Validation & Security
+  validators: ^3.0.0
+  ip: ^2.1.1
+  
+  # Device Info & Platform
   device_info_plus: ^12.3.0
   package_info_plus: ^9.0.0
+  platform: ^3.1.4
 
 dev_dependencies:
   flutter_test:
