fix some issue oneClickConnect() never actually connects VPN - just sets config, returns true , Multiple method channel handler conflicts - 4 managers overwrites each other , Auto/WARP/Streaming connect show Connected  but no actual VPN tunnel , BuiltInServer uses placeholder WireGuard keys - will always fail , distanceFrom() Haversine formula is wrong - uses multiplication instead of sin/cos , VPN StatusStream accessed before initialization - crashes , MissingPluginException silently simulates connection - fake security , Connection state not clearing error messages on retry , Multiple disconnected state systems not synced , Memory leaks in StreamControllers

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,35 +1,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
-    <!-- VPN and Network Permissions -->
+    <!-- ============ CORE NETWORK PERMISSIONS ============ -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    
+    <!-- ============ FOREGROUND SERVICE PERMISSIONS ============ -->
+    <!-- Required for running VPN/Proxy as foreground service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!-- Android 14+ (API 34): Must declare foreground service type -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    
+    <!-- ============ NOTIFICATION PERMISSION ============ -->
+    <!-- Android 13+ (API 33): Required to show VPN status notification -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    
+    <!-- ============ SYSTEM PERMISSIONS ============ -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     
-    <!-- VPN Permissions (for system VPN service) -->
-    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
-    <uses-permission android:name="android.permission.BIND_NETWORK_RECOMMENDATION_SERVICE" />
-    
-    <!-- Location Permissions (for smart server selection) -->
+    <!-- ============ LOCATION PERMISSIONS (smart server selection) ============ -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
-    <!-- System Permissions for VPN Control -->
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    
-    <!-- Camera Permission (for QR code scanning) -->
+    <!-- ============ CAMERA PERMISSION (QR code scanning) ============ -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     
-    <!-- Storage Permission (for config import/export) -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+    <!-- ============ STORAGE PERMISSIONS (config import/export) ============ -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
+        android:maxSdkVersion="29" />
 
     <application
         android:label="Privacy VPN Controller"
