--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,18 @@ dev_dependencies:
   build_runner: ^2.4.7
   riverpod_generator: ^2.3.9
   json_serializable: ^6.7.1
+  
+  # App Icon Generator
+  flutter_launcher_icons: ^0.14.3
+
+# App Icon Configuration - uses your actual logo
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.jpg"
+  adaptive_icon_background: "#121212"
+  adaptive_icon_foreground: "assets/images/logo.jpg"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
